<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_margin="15dp"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_your_email"
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_margin="15dp"
            android:hint="@string/enter_your_password"
            android:id="@+id/editTextPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_margin="15dp"
            android:id="@+id/buttonSignIn"
            android:text="@string/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textViewSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_register_here"
            android:textAlignment="center" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonTravel"
        android:layout_width="183dp"
        android:layout_height="81dp"
        android:text="Activity Travel"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="300dp" />

</androidx.constraintlayout.widget.ConstraintLayout>